Disabled GithubPage plugin for now

--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,14 @@ buildscript {
         classpath "org.asciidoctor:asciidoctor-gradle-plugin:${project.asciiDoctorGradlePluginVersion}"
         classpath "org.asciidoctor:asciidoctorj-pdf:${project.asciiDoctorJPdfVersion}"
         classpath "org.asciidoctor:asciidoctorj:${project.asciiDoctorJVersion}"
-        classpath "org.ajoberstar:gradle-git:${project.gradleGitVersion}"
+        /*classpath "org.ajoberstar:gradle-git:${project.gradleGitVersion}"*/
         classpath "com.bluepapa32:gradle-watch-plugin:${project.gradleWatchPluginVersion}"
         classpath "org.kordamp.gradle:livereload-gradle-plugin:${project.livereloadGradlePluginVersion}"
     }
 }
 
 apply plugin: 'org.asciidoctor.convert'
-apply plugin: 'org.ajoberstar.github-pages'
+/*apply plugin: 'org.ajoberstar.github-pages'*/
 apply plugin: 'com.bluepapa32.watch'
 apply plugin: 'org.kordamp.gradle.livereload'
 
@@ -30,7 +30,7 @@ asciidoctor {
     backends = ['html5','pdf']
 }
 
-githubPages {
+/*githubPages {
     repoUri = 'https://github.com/javaslang/javaslang-docs.git'
 
     credentials {
@@ -41,7 +41,7 @@ githubPages {
     pages {
         from file(asciidoctor.outputDir.path + '/html5')
     }
-}
+}*/
 
 watch {
     asciidoc {
@@ -54,7 +54,7 @@ liveReload {
     docRoot asciidoctor.outputDir.canonicalPath
 }
 
-publishGhPages.dependsOn asciidoctor
+/*publishGhPages.dependsOn asciidoctor*/
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.7'
