Added introduction based on a blog post of Daniel Dietrich

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,11 @@ asciidoctor {
         include 'index.adoc'
     }
     backends = ['html5']
+    resources {
+        from(sourceDir) {
+            include 'images/**'
+        }
+    }
 }
 
 publishGhPages.dependsOn asciidoctor
