--- a/build.gradle
+++ b/build.gradle
@@ -59,8 +59,18 @@ asciidoctor {
     }
 }
 
+tasks.withType(Copy) {
+    eachFile { println it.file }
+}
+
+task copyCNAME(type: Copy) {
+    from 'CNAME'
+    into file(asciidoctor.outputDir.path + '/html5')
+}
+
 asciidoctor.dependsOn test
-publishGhPages.dependsOn asciidoctor
+copyCNAME.dependsOn asciidoctor
+publishGhPages.dependsOn copyCNAME
 
 githubPages {
     repoUri = 'https://github.com/javaslang/javaslang-docs.git'
@@ -72,7 +82,7 @@ githubPages {
 
     pages {
         from file(asciidoctor.outputDir.path + '/html5')
-        into project.version
+        // into project.version
     }
 }
 
