--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,5 @@ gradleWatchPluginVersion=0.1.5
 livereloadGradlePluginVersion=0.2.1
 
 description = Javaslang Documentation
-version = 2.0.0-RC4
-group = com.javaslang
+version = 2.0.0
+group = io.javaslang
