--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,6 @@ gradleGitVersion=1.3.2
 gradleWatchPluginVersion=0.1.5
 livereloadGradlePluginVersion=0.2.1
 
-description = Javaslang Documentation
-version = 2.0.5
-group = io.javaslang
+description = Vavr Documentation
+version = 0.9.0
+group = io.vavr
