replaced remote google fonts with local font-awesome

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ asciidoctor {
     resources {
         from(sourceDir) {
             include 'images/**'
+            include 'css/**'
         }
     }
 }
