V[0.0.1] Update version asciidoctor and gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
-asciiDoctorGradlePluginVersion=1.5.3
+asciiDoctorMavenPluginVersion=2.2.6
 asciiDoctorJPdfVersion=1.5.0-alpha.10
 gradleGitVersion=1.3.2
-gradleWatchPluginVersion=0.1.5
 livereloadGradlePluginVersion=0.2.1
+asciidoctorGradleJvm=2.4.0
+asciidoctorGradleBase=2.4.0
 
 description = Vavr Documentation
 version = 0.10.4
