--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,26 @@
 buildscript {
     repositories {
-        jcenter()
         mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath "org.asciidoctor:asciidoctor-gradle-plugin:${project.asciiDoctorGradlePluginVersion}"
+        classpath "org.asciidoctor:asciidoctor-maven-plugin:${project.asciiDoctorMavenPluginVersion}"
         classpath "org.asciidoctor:asciidoctorj-pdf:${project.asciiDoctorJPdfVersion}"
         classpath "org.ajoberstar:gradle-git:${project.gradleGitVersion}"
-        classpath "com.bluepapa32:gradle-watch-plugin:${project.gradleWatchPluginVersion}"
         classpath "org.kordamp.gradle:livereload-gradle-plugin:${project.livereloadGradlePluginVersion}"
+        classpath "org.asciidoctor:asciidoctor-gradle-jvm:${project.asciidoctorGradleJvm}"
+        classpath "org.asciidoctor:asciidoctor-gradle-base:${project.asciidoctorGradleBase}"
     }
 }
 
-apply plugin: 'org.asciidoctor.convert'
+apply plugin: 'org.asciidoctor.jvm.convert'
 apply plugin: 'org.ajoberstar.github-pages'
-apply plugin: 'com.bluepapa32.watch'
 apply plugin: 'org.kordamp.gradle.livereload'
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'org.asciidoctor.base'
 
 repositories {
-    jcenter()
     mavenCentral()
     maven {
         url "https://oss.sonatype.org/content/repositories/snapshots"
@@ -51,7 +51,10 @@ asciidoctor {
     sources {
         include 'index.adoc'
     }
-    backends = ['html5']
+    outputOptions {
+        backends = ['html5']
+    }
+    outputDir = file("$buildDir/docs/asciidoc")
     resources {
         from(sourceDir) {
             include 'images/**'
@@ -59,11 +62,11 @@ asciidoctor {
     }
 }
 
-tasks.withType(Copy) {
+tasks.withType(Copy).configureEach {
     eachFile { println it.file }
 }
 
-task copyCNAME(type: Copy) {
+tasks.register('copyCNAME', Copy) {
     from 'CNAME'
     into file(asciidoctor.outputDir.path + '/html5')
 }
@@ -86,13 +89,23 @@ githubPages {
     }
 }
 
-watch {
-    asciidoc {
-        files fileTree('src/docs/asciidoc')
-        tasks 'asciidoctor'
+liveReload {
+    docRoot asciidoctor.outputDir.canonicalPath
+}
+
+tasks.register('watchAsciidoc') {
+    doLast {
+        tasks.asciidoctor.execute()
     }
 }
 
-liveReload {
-    docRoot asciidoctor.outputDir.canonicalPath
+tasks.register('watch') {
+    doLast {
+        fileTree('src/docs/asciidoc').visit { fileDetails ->
+            if (fileDetails.file.isFile()) {
+                println "Watching file: ${fileDetails.file}"
+            }
+        }
+        tasks.watchAsciidoc.execute()
+    }
 }
